--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,26 @@ spring.datasource.url=jdbc:mysql://localhost:3306/demo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+spring.jpa.show-sql=true
+
+#SOLR
+spring.data.solr.host=http://127.0.0.1:8983/solr
+solr.collection.employee=http://guest:12345@localhost:8983/solr/collection_employee/
+solr.collection.department=http://guest:12345@localhost:8983/solr/collection_department/
+
+#REDIS
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=50
+spring.redis.database=0
+spring.cache.redis.cache-null-values=false
+spring.cache.redis.key-prefix=demo:saif:
+spring.cache.cache-names=employee,department
+
+#REDIS POOL
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=0
